--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./feder_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Schwerelos"
-      content="Curated kinky photos"
+      name="State Of Confusion"
+      content="Techno aus Berli"
     />
-    <link rel="apple-touch-icon" href="./feder_logo.png" />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <title>Schwerelos - Techno kollektiv aus Berlin: LABEL | OPEN AIRS | CLUB | SHOWCASES</title>
+    <title>State Of Confusion | Techno aus Berlin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
