--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Techno aus Berli"
     />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <title>State Of Confusion | Techno aus Berlin</title>
+    <title>State Of Confusion - Techno | Raves | Berlin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
