--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="State Of Confusion"
-      content="Techno aus Berli"
+      content="Techno aus Berlin"
     />
     <link rel="manifest" href="./manifest.webmanifest" />
     <title>State Of Confusion - Techno | Raves | Berlin</title>
